# rsdo-gfp

./: .gitignore  CMakeLists.txt  README.md  gfp.ini  main.cpp  rsdo-gfp.ini  rsdo-gfp.sln  rsdo-gfp.vcxproj  test.txt
data/: velcrke.dct
src/: Proteus_GFP.cpp  Proteus_GFP.h  aparsablestring.cpp  aparsablestring.h  conv.cpp  conv.h  dynarray.cpp  dynarray.h  ffind.cpp  ffind.h  gfp.cpp  gfp.h  linux.cpp  linux.h  mystrings.cpp  mystrings.h  naglas.cpp  paths.cpp  paths.h  pattern.cpp  pattern.h  pretvori.cpp  profile5.cpp  profile5.h  pron.h  samcrke.cpp  simboli.cpp  sint1.cpp  sint1.h  slovar.cpp  stavek.cpp  switches.cpp  switches.h  synth_types.h  tstring.cpp  tstring.h  util_stuff.cpp  util_stuff.h  velcrke.cpp  zlogi.cpp
